核心库代码编写

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>Hello World</title>
+	<style>
+		#main {
+			height: 300px;
+			width: 600px;
+		}
+	</style>
 </head>
 <body>
 <h1>Hello World</h1>
+<div id="main"></div>
 </body>
 </html>
